Fix spacing on sidebar, remove grid

--- a/index.html
+++ b/index.html
@@ -23,56 +23,28 @@
       <section class="sidebar-left">
         <section class="sidebar-left-main">
           <ul><h3>Main</h3>
-            <li><i class="fas fa-home"></i></li>
-            <li><i class="fas fa-briefcase"></i></li>
-            <li><i class="fas fa-file-alt"></i></li>
-            <li><i class="fas fa-clipboard-list"></i></li>
-            <li><i class="fas fa-calendar-alt"></i></li>
+            <li><i class="fas fa-home"><a href="#">Home</a></i></li>
+            <li><i class="fas fa-briefcase"><a href="#">Jobs</a></i></li>
+            <li><i class="fas fa-file-alt"><a href="#">Resumes</a></i></li>
+            <li><i class="fas fa-clipboard-list"><a href="#">Tasks</a></i></li>
+            <li><i class="fas fa-calendar-alt"><a href="#">Calendar</a></i></li>
           </ul>
         </section>
         <section class="sidebar-left-admin">
           <ul><h3>Admin</h3>
-            <li><i class="fas fa-user-friends"></i></li>
-            <li><i class="fas fa-map-marker-alt"></i></li>
-            <li><i class="fas fa-sitemap"></i></li>
-            <li><i class="active-li fas fa-paste"></i></li>
-            <li><i class="fas fa-project-diagram"></i></li>
+            <li><i class="fas fa-user-friends"><a href="#">Users</a></i></li>
+            <li><i class="fas fa-map-marker-alt"><a href="#">Locations</a></i></li>
+            <li><i class="fas fa-sitemap"><a href="#">Workflows</a></i></li>
+            <li><i class="active-li fas fa-paste"><a class="active-link" href="#">Job Boards</a></i></li>
+            <li><i class="fas fa-project-diagram"></i><a href="#">Social</a></li>
           </ul>
         </section>
         <section class="sidebar-left-categories">
           <ul><h3>Categories</h3>
-            <li><i class="yellow-checkbox fas fa-check-square"></i></li>
-            <li><i class="blue-checkbox fas fa-square"></i></li>
-            <li> <i class="red-checkbox fas fa-square"></i></li>
-            <li><i class="green-checkbox fas fa-square"></i></li>
-          </ul>
-        </section>
-      </section>
-      <section class="sidebar-right">
-        <section class="sidebar-right-main">
-          <ul><h3>Main</h3>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Resumes</a></li>
-            <li><a href="#">Tasks</a></li>
-            <li><a href="#">Calendar</a></li>
-          </ul>
-        </section>
-        <section class="sidebar-right-admin">
-          <ul><h3>Admin</h3>
-            <li> <a href="#">Users</a></li>
-            <li><a href="#">Locations</a></li>
-            <li><a href="#">Workflows</a></li>
-            <li><a class="active-link" href="#">Job Boards</a></li>
-            <li><a href="#">Social</a></li>
-          </ul>
-        </section>
-        <section class="sidebar-right-categories">
-          <ul><h3>Categories</h3>
-            <li><a href="#">Administrative</a></li>
-            <li><a href="#">Design</a></li>
-            <li> <a href="#">Executive</a></li>
-            <li><a href="#">Human Resources</a></li>
+            <li><i class="yellow-checkbox fas fa-check-square"><a href="#">Administrative</a></i></li>
+            <li><i class="blue-checkbox fas fa-square"><a href="#">Design</a></i></li>
+            <li> <i class="red-checkbox fas fa-square"><a href="#">Executive</a></i></li>
+            <li><i class="green-checkbox fas fa-square"><a href="#">Human Resources</a></i></li>
           </ul>
         </section>
       </section>
