Add nav bar at small width

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             </button>
           </div>
         </section>
+        <button class="navigation"><i class="secret-button fas fa-bars"></i></i>Navigation</button>
         <ul class="main-nav">
           <li class="focus main-lis"><a href="#">Summary</a></li>
           <li class="main-lis"><a href="#">Applicants</a></li>
