fix border left on active

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><i class="fas fa-user-friends"><a href="#">Users</a></i></li>
             <li><i class="fas fa-map-marker-alt"><a href="#">Locations</a></i></li>
             <li><i class="fas fa-sitemap"><a href="#">Workflows</a></i></li>
-            <li><i class="active-li fas fa-paste"><a class="active-link" href="#">Job Boards</a></i></li>
+            <li id="active-li"><i class="fas fa-paste"><a class="active-link" href="#">Job Boards</a></i></li>
             <li><i class="fas fa-project-diagram"></i><a href="#">Social</a></li>
           </ul>
         </section>
