rearrange buttons, hide some

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
               <text x="9" y="25" class="circle-explain">Forwards</text>
             </svg>
           </figure>
+          <div class="totals2">
+              <button class="total apps-day-secret">Applicants/Day</button>
+            </div>
         </section>
         <section class = "bar-graph-container">
             <figure class="bar-graph"></figure>
