text sizing issues

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </tr>
         <tr>
           <td class="td">Description</td>
-          <td class="td">The front-end developer creates interaction and user experience with scripts          embedded in a site’s HTML. Everything a visitor to your site sees, clicks, or uses to input or     retrieve information is the work of the front-end developer who creates client-side software       that brings the site’s design to life. Scripts are downloaded by the browser, processed, and       then run apart from the server.</td>
+          <td class="td description-text">The front-end developer creates interaction and user experience with scripts embedded in a site’s HTML. Everything a visitor to your site sees, clicks, or uses to input or retrieve information is the work of the front-end developer who creates client-side software that brings the site’s design to life. Scripts are downloaded by the browser, processed, and then run apart from the server.</td>
         </tr>
         <tr>
           <td class="td">Hiring Lead</td>
@@ -201,9 +201,9 @@
       <aside class="right-side-mini-nav">
         <div class="right-side-nav-container">
           <section class="social-media-links">
-            <button class="social facebook-link"><i class="fab fa-facebook-f"></i>Post to Facebook</button>
-            <button class="social twitter-link"><i class="fab fa-twitter"></i>Tweet this Job</button>
-            <button class="social linkedin-link"><i class="fab fa-linkedin"></i>Post to LinkedIn</button>
+            <button class="social facebook-link"><i class="fab fa-facebook-f"></i>Facebook</button>
+            <button class="social twitter-link"><i class="fab fa-twitter"></i>Twitter</button>
+            <button class="social linkedin-link"><i class="fab fa-linkedin"></i>LinkedIn</button>
           </section>
           <h5>
             <i class="fas fa-globe"></i>Link to this Job</h5>
